sjeng/use_undefined_identifier/c0/HandlePtell
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/HandlePtell/src/partner.c:546:28: error: use of undeclared identifier 'off_427F8C'
if ( !strncmp( inputa + 6, off_427F8C, 3uLL) ) 
                           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/HandlePtell/src/partner.c:608:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/HandlePtell/src/partner.c:748:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
3 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/HandlePtell/src/obj/partner.o] Error 1
